Fixes double visible border on current theme bar for info button

--- a/client/my-sites/themes/current-theme/style.scss
+++ b/client/my-sites/themes/current-theme/style.scss
@@ -125,4 +125,8 @@ $current-theme-border: 1px solid lighten( $gray, 20% );
 .current-theme__info {
 	border-left: $current-theme-border;
 	border-right: $current-theme-border;
+
+	&:last-child {
+		border-right: none;
+	}
 }
